src/main/java/GramaticaParser.java
// Generated from C:/Users/Acer/Documents/Proyectos Java/CompiladoresANTLR/src/main/java\Gramatica.g4 by ANTLR 4.10.1

    import java.lang.Math;
    import java.util.Map;
    import java.util.HashMap;
    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINCIPAL=1, SI=2, SINO=3, MIENTRAS=4, IMPRIMIR=5, VAR=6, MAS=7, MENOS=8, 
		MULT=9, POT=10, DIV=11, MOD=12, Y=13, O=14, NO=15, MAY=16, MAYIG=17, MEN=18, 
		MENIG=19, IG=20, NOIG=21, ASIG=22, LLAVE_ABI=23, LLAVE_CER=24, PAREN_ABI=25, 
		PAREN_CER=26, CORCH_ABI=27, CORCH_CER=28, PUNTOYCOM=29, BOOLEANO=30, NUMERO=31, 
		CADENA=32, ID=33, EB=34;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_dec_var = 2, RULE_asig_var = 3, 
		RULE_imprimir = 4, RULE_condicional = 5, RULE_mientras = 6, RULE_expresion = 7, 
		RULE_fact = 8, RULE_term = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "dec_var", "asig_var", "imprimir", "condicional", 
			"mientras", "expresion", "fact", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PRINCIPAL'", "'SI'", "'SINO'", "'MIENTRAS'", "'Imprimir'", "'var'", 
			"'+'", "'-'", "'*'", null, "'/'", "'%'", null, null, null, "'>'", "'>='", 
			"'<'", "'<='", "'=='", "'!='", null, "'{'", "'}'", "'('", "')'", "'['", 
			"']'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PRINCIPAL", "SI", "SINO", "MIENTRAS", "IMPRIMIR", "VAR", "MAS", 
			"MENOS", "MULT", "POT", "DIV", "MOD", "Y", "O", "NO", "MAY", "MAYIG", 
			"MEN", "MENIG", "IG", "NOIG", "ASIG", "LLAVE_ABI", "LLAVE_CER", "PAREN_ABI", 
			"PAREN_CER", "CORCH_ABI", "CORCH_CER", "PUNTOYCOM", "BOOLEANO", "NUMERO", 
			"CADENA", "ID", "EB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Map<String,Object> TablaDeSimbolos = new HashMap<String,Object>();

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public SentenciaContext sentencia;
		public TerminalNode PRINCIPAL() { return getToken(GramaticaParser.PRINCIPAL, 0); }
		public TerminalNode LLAVE_ABI() { return getToken(GramaticaParser.LLAVE_ABI, 0); }
		public TerminalNode LLAVE_CER() { return getToken(GramaticaParser.LLAVE_CER, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(PRINCIPAL);
			setState(21);
			match(LLAVE_ABI);
			List<ASTnodo> cuerpoPrincipal = new ArrayList<ASTnodo>();
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << MIENTRAS) | (1L << IMPRIMIR) | (1L << VAR) | (1L << ID))) != 0)) {
				{
				{
				setState(23);
				((ProgramaContext)_localctx).sentencia = sentencia();
				cuerpoPrincipal.add(((ProgramaContext)_localctx).sentencia.nodo);
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			match(LLAVE_CER);
			cuerpoPrincipal.forEach(nodo -> nodo.ejecutar(TablaDeSimbolos));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public ASTnodo nodo;
		public ImprimirContext imprimir;
		public CondicionalContext condicional;
		public MientrasContext mientras;
		public Dec_varContext dec_var;
		public Asig_varContext asig_var;
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public Dec_varContext dec_var() {
			return getRuleContext(Dec_varContext.class,0);
		}
		public Asig_varContext asig_var() {
			return getRuleContext(Asig_varContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPRIMIR:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				((SentenciaContext)_localctx).imprimir = imprimir();
				((SentenciaContext)_localctx).nodo =  ((SentenciaContext)_localctx).imprimir.nodo;
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				((SentenciaContext)_localctx).condicional = condicional();
				((SentenciaContext)_localctx).nodo =  ((SentenciaContext)_localctx).condicional.nodo;
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				((SentenciaContext)_localctx).mientras = mientras();
				((SentenciaContext)_localctx).nodo =  ((SentenciaContext)_localctx).mientras.nodo;
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				((SentenciaContext)_localctx).dec_var = dec_var();
				((SentenciaContext)_localctx).nodo =  ((SentenciaContext)_localctx).dec_var.nodo;
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				((SentenciaContext)_localctx).asig_var = asig_var();
				((SentenciaContext)_localctx).nodo =  ((SentenciaContext)_localctx).asig_var.nodo;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_varContext extends ParserRuleContext {
		public ASTnodo nodo;
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode VAR() { return getToken(GramaticaParser.VAR, 0); }
		public TerminalNode PUNTOYCOM() { return getToken(GramaticaParser.PUNTOYCOM, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(GramaticaParser.ASIG, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Dec_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDec_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDec_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDec_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_varContext dec_var() throws RecognitionException {
		Dec_varContext _localctx = new Dec_varContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(VAR);
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(52);
				((Dec_varContext)_localctx).ID = match(ID);
				((Dec_varContext)_localctx).nodo =  new DeclararVariable((((Dec_varContext)_localctx).ID!=null?((Dec_varContext)_localctx).ID.getText():null));
				}
				break;
			case 2:
				{
				setState(54);
				((Dec_varContext)_localctx).ID = match(ID);
				setState(55);
				match(ASIG);
				setState(56);
				((Dec_varContext)_localctx).expresion = expresion();
				((Dec_varContext)_localctx).nodo =  new AsignarVariable((((Dec_varContext)_localctx).ID!=null?((Dec_varContext)_localctx).ID.getText():null),((Dec_varContext)_localctx).expresion.nodo);
				}
				break;
			}
			setState(61);
			match(PUNTOYCOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Asig_varContext extends ParserRuleContext {
		public ASTnodo nodo;
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(GramaticaParser.ASIG, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTOYCOM() { return getToken(GramaticaParser.PUNTOYCOM, 0); }
		public Asig_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asig_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterAsig_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitAsig_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAsig_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asig_varContext asig_var() throws RecognitionException {
		Asig_varContext _localctx = new Asig_varContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asig_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((Asig_varContext)_localctx).ID = match(ID);
			setState(64);
			match(ASIG);
			setState(65);
			((Asig_varContext)_localctx).expresion = expresion();
			setState(66);
			match(PUNTOYCOM);
			((Asig_varContext)_localctx).nodo =  new AsignarVariable((((Asig_varContext)_localctx).ID!=null?((Asig_varContext)_localctx).ID.getText():null),((Asig_varContext)_localctx).expresion.nodo);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public ASTnodo nodo;
		public ExpresionContext expresion;
		public TerminalNode IMPRIMIR() { return getToken(GramaticaParser.IMPRIMIR, 0); }
		public TerminalNode PAREN_ABI() { return getToken(GramaticaParser.PAREN_ABI, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_CER() { return getToken(GramaticaParser.PAREN_CER, 0); }
		public TerminalNode PUNTOYCOM() { return getToken(GramaticaParser.PUNTOYCOM, 0); }
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterImprimir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitImprimir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImprimir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(IMPRIMIR);
			setState(70);
			match(PAREN_ABI);
			setState(71);
			((ImprimirContext)_localctx).expresion = expresion();
			setState(72);
			match(PAREN_CER);
			setState(73);
			match(PUNTOYCOM);
			((ImprimirContext)_localctx).nodo =  new Imprimir(((ImprimirContext)_localctx).expresion.nodo); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public ASTnodo nodo;
		public ExpresionContext expresion;
		public SentenciaContext sent;
		public SentenciaContext sent2;
		public TerminalNode SI() { return getToken(GramaticaParser.SI, 0); }
		public TerminalNode PAREN_ABI() { return getToken(GramaticaParser.PAREN_ABI, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_CER() { return getToken(GramaticaParser.PAREN_CER, 0); }
		public List<TerminalNode> LLAVE_ABI() { return getTokens(GramaticaParser.LLAVE_ABI); }
		public TerminalNode LLAVE_ABI(int i) {
			return getToken(GramaticaParser.LLAVE_ABI, i);
		}
		public List<TerminalNode> LLAVE_CER() { return getTokens(GramaticaParser.LLAVE_CER); }
		public TerminalNode LLAVE_CER(int i) {
			return getToken(GramaticaParser.LLAVE_CER, i);
		}
		public TerminalNode SINO() { return getToken(GramaticaParser.SINO, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(SI);
			setState(77);
			match(PAREN_ABI);
			setState(78);
			((CondicionalContext)_localctx).expresion = expresion();
			setState(79);
			match(PAREN_CER);
			List<ASTnodo> cuerpoSi = new ArrayList<ASTnodo>();
			             List<ASTnodo> cuerpoSino = new ArrayList<ASTnodo>();
			setState(81);
			match(LLAVE_ABI);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << MIENTRAS) | (1L << IMPRIMIR) | (1L << VAR) | (1L << ID))) != 0)) {
				{
				{
				setState(82);
				((CondicionalContext)_localctx).sent = sentencia();
				cuerpoSi.add(((CondicionalContext)_localctx).sent.nodo);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(LLAVE_CER);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(91);
				match(SINO);
				setState(92);
				match(LLAVE_ABI);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << MIENTRAS) | (1L << IMPRIMIR) | (1L << VAR) | (1L << ID))) != 0)) {
					{
					{
					setState(93);
					((CondicionalContext)_localctx).sent2 = sentencia();
					cuerpoSino.add(((CondicionalContext)_localctx).sent2.nodo);
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(LLAVE_CER);
				}
			}

			((CondicionalContext)_localctx).nodo =  new Si(((CondicionalContext)_localctx).expresion.nodo,cuerpoSi,cuerpoSino);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public ASTnodo nodo;
		public ExpresionContext expresion;
		public SentenciaContext sentM;
		public TerminalNode MIENTRAS() { return getToken(GramaticaParser.MIENTRAS, 0); }
		public TerminalNode PAREN_ABI() { return getToken(GramaticaParser.PAREN_ABI, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_CER() { return getToken(GramaticaParser.PAREN_CER, 0); }
		public TerminalNode LLAVE_ABI() { return getToken(GramaticaParser.LLAVE_ABI, 0); }
		public TerminalNode LLAVE_CER() { return getToken(GramaticaParser.LLAVE_CER, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterMientras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitMientras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitMientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mientras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(MIENTRAS);
			setState(107);
			match(PAREN_ABI);
			setState(108);
			((MientrasContext)_localctx).expresion = expresion();
			setState(109);
			match(PAREN_CER);
			List<ASTnodo> cuerpo = new ArrayList<ASTnodo>();
			setState(111);
			match(LLAVE_ABI);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << MIENTRAS) | (1L << IMPRIMIR) | (1L << VAR) | (1L << ID))) != 0)) {
				{
				{
				setState(112);
				((MientrasContext)_localctx).sentM = sentencia();
				cuerpo.add(((MientrasContext)_localctx).sentM.nodo);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(LLAVE_CER);
			((MientrasContext)_localctx).nodo =  new Mientras(((MientrasContext)_localctx).expresion.nodo,cuerpo);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public ASTnodo nodo;
		public FactContext t1;
		public FactContext t2;
		public List<FactContext> fact() {
			return getRuleContexts(FactContext.class);
		}
		public FactContext fact(int i) {
			return getRuleContext(FactContext.class,i);
		}
		public List<TerminalNode> MAS() { return getTokens(GramaticaParser.MAS); }
		public TerminalNode MAS(int i) {
			return getToken(GramaticaParser.MAS, i);
		}
		public List<TerminalNode> MENOS() { return getTokens(GramaticaParser.MENOS); }
		public TerminalNode MENOS(int i) {
			return getToken(GramaticaParser.MENOS, i);
		}
		public List<TerminalNode> Y() { return getTokens(GramaticaParser.Y); }
		public TerminalNode Y(int i) {
			return getToken(GramaticaParser.Y, i);
		}
		public List<TerminalNode> O() { return getTokens(GramaticaParser.O); }
		public TerminalNode O(int i) {
			return getToken(GramaticaParser.O, i);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
